--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "cz-lerna-changelog": "2.0.2",
     "lerna": "^3.4.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-lerna-changelog"
+    }
   }
 }
