--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "version": "0.0.0-development",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wizeline/lerna-leo.git"
+    "url": "https://github.com/wizeline/lerna-leo.git"
   },
   "publishConfig": {
     "access": "restricted"
