--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: node_js
 
 node_js:
   - 10
-  - 8
 
 jobs:
   include:
@@ -10,9 +9,13 @@ jobs:
     - stage: release
       node_js: lts/*
       # Advanced: optionally overwrite your default `script` step to skip the tests
-      # script: skip
+      script: skip
       deploy:
         provider: script
         skip_cleanup: true
         script:
-          - npx semantic-release
+          - lerna-semantic-release pre # Set up the versions, tags and commits
+
+          - lerna-semantic-release perform # Publishes to npm
+
+          -  lerna-semantic-release post # Generates a changelog in each package in a file named CHANGELOG.md - will not commit or push that file any more after version 7.0.5 any more. If you want to do something with it, you will need to do this manually.
