--- a/packages/learning-package-two/package.json
+++ b/packages/learning-package-two/package.json
@@ -30,5 +30,6 @@
   "devDependencies": {
     "typescript": "3.5.2"
   },
-  "typings": "lib/learning-package-two.d.ts"
+  "typings": "lib/learning-package-two.d.ts",
+  "gitHead": "d8234c7563ddc4fbfa6a9d0f79cb7df18b1f6c8d"
 }
