--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,4 @@ jobs:
         provider: script
         skip_cleanup: true
         script:
-          - lerna-semantic-release pre # Set up the versions, tags and commits
-
-          - lerna-semantic-release perform # Publishes to npm
-
-          -  lerna-semantic-release post # Generates a changelog in each package in a file named CHANGELOG.md - will not commit or push that file any more after version 7.0.5 any more. If you want to do something with it, you will need to do this manually.
+          - npx semantic-release
