--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lerna": "^3.15.0",
     "lerna-semantic-release": "9.1.0",
     "semantic-release": "^15.13.16",
-    "typescript": "3.5.2"
+    "typescript": "3.5.2",
+    "@semantic-release/changelog": "3.0.2",
+    "@semantic-release/git": "7.0.8"
   },
   "config": {
     "commitizen": {
