--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,4 @@ jobs:
         provider: script
         skip_cleanup: true
         script:
-          - npx semantic-release
-          - npx ci-publish
+          - npm run ci-publish
