--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "husky": "2.4.1",
     "lerna": "^3.15.0",
     "lerna-semantic-release": "9.1.0",
-    "semantic-release": "15.13.16",
     "typescript": "3.5.2"
   },
   "config": {
@@ -19,7 +18,7 @@
     "semantic-release": "lerna-semantic-release pre && lerna-semantic-release post && lerna-semantic-release perform",
     "postinstall": "lerna bootstrap",
     "bootstrap": "lerna bootstrap",
-    "ci-publish": "run semantic-release && lerna run tsc && lerna publish",
+    "ci-publish": "semantic-release && lerna run tsc && lerna publish",
     "publish": "lerna run tsc && lerna publish"
   },
   "version": "0.2.0",
