fix(main): package

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "bootstrap": "lerna bootstrap",
     "ci-publish": "semantic-release && lerna run tsc && lerna publish",
     "publish": "lerna run tsc && lerna-semantic-release pre && lerna-semantic-release post && lerna-semantic-release perform && lerna publish",
-    "release": "lerna run tsc && lerna publish"
+    "release": "lerna run tsc && lerna publish",
+    "random": "npx semantic-release"
   },
   "version": "0.2.0",
   "repository": {
