--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "@wizeline/lerna-leo",
   "private": false,
   "devDependencies": {
+    "@semantic-release/changelog": "3.0.1",
+    "@semantic-release/git": "7.0.5",
     "cz-lerna-changelog": "2.0.2",
     "husky": "2.4.1",
     "lerna": "^3.15.0",
     "lerna-semantic-release": "9.1.0",
+    "semantic-release": "15.13.12",
+    "commitizen": "3.1.1",
+    "semantic-release-conventional-commits": "2.0.1",
     "typescript": "3.5.2"
   },
   "config": {
@@ -15,12 +20,10 @@
   },
   "scripts": {
     "commit": "npx git-cz",
-    "semantic-release": "lerna-semantic-release pre && lerna-semantic-release post && lerna-semantic-release perform",
     "postinstall": "lerna bootstrap",
+    "semantic-release": "semantic-release",
     "bootstrap": "lerna bootstrap",
-    "ci-publish": "semantic-release && lerna run tsc && lerna publish",
-    "publish": "lerna run tsc && lerna-semantic-release pre && lerna-semantic-release post && lerna-semantic-release perform && lerna publish",
-    "release": "lerna run tsc && lerna publish"
+    "ci-publish": "semantic-release && lerna run tsc && lerna publish"
   },
   "version": "0.2.0",
   "repository": {
@@ -33,6 +36,19 @@
   "description": "[![lerna](https://img.shields.io/badge/maintained%20with-lerna-cc00ff.svg)](https://lerna.js.org/) [![Commitizen friendly](https://img.shields.io/badge/commitizen-friendly-brightgreen.svg)](http://commitizen.github.io/cz-cli/)",
   "bugs": {
     "url": "https://github.com/wizeline/lerna-leo/issues"
+  },
+  "release": {
+    "branch": "develop",
+    "prepare": [
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/git"
+    ],
+    "verifyConditions": [
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/git"
+    ]
   },
   "homepage": "https://github.com/wizeline/lerna-leo#readme",
   "main": "index.js",
