--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "commit": "npx git-cz",
     "postinstall": "lerna bootstrap",
-    "semantic-release": "semantic-release",
+    "semantic-release": "lerna-semantic-release pre && lerna-semantic-release post && lerna-semantic-release perform",
     "bootstrap": "lerna bootstrap",
     "ci-publish": "semantic-release && lerna run tsc && lerna publish"
   },
