--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "postinstall": "lerna bootstrap",
     "semantic-release": "lerna-semantic-release pre && lerna-semantic-release post && lerna-semantic-release perform",
     "bootstrap": "lerna bootstrap",
-    "ci-publish": "semantic-release && lerna run tsc && lerna publish"
+    "ci-publish": "semantic-release && lerna run tsc && lerna publish",
+    "co-publish-normal": "lerna run tsc && lerna publish"
   },
   "version": "0.2.3",
   "repository": {
