--- a/packages/learning-package-one/package.json
+++ b/packages/learning-package-one/package.json
@@ -31,7 +31,7 @@
     "url": "git+https://github.com/wizeline/lerna-leo.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 2",
+    "test": "echo test - package-one",
     "tsc": "tsc"
   },
   "typings": "lib/learning-package-one.d.ts",
