--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ jobs:
         provider: script
         skip_cleanup: true
         script:
+          - echo ~/.npmrc
           - npm run ci-publish
