--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "husky": "2.4.1",
     "lerna": "^3.15.0",
     "lerna-semantic-release": "9.1.0",
-    "semantic-release": "15.13.12",
     "commitizen": "3.1.1",
     "semantic-release-conventional-commits": "2.0.1",
     "typescript": "3.5.2"
@@ -24,8 +23,7 @@
     "postinstall": "lerna bootstrap",
     "semantic-release": "lerna-semantic-release pre && lerna-semantic-release post && lerna-semantic-release perform",
     "bootstrap": "lerna bootstrap",
-    "ci-publish": "semantic-release && lerna run tsc && lerna publish",
-    "co-publish-normal": "lerna run tsc && lerna publish"
+    "ci-publish": "semantic-release && lerna run tsc && lerna publish"
   },
   "version": "0.3.8",
   "repository": {
