--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@evolsignal/lerna-leo",
+  "name": "@wizeline/lerna-leo",
   "private": false,
   "devDependencies": {
     "@semantic-release/changelog": "3.0.1",
@@ -22,7 +22,9 @@
     "commit": "npx git-cz",
     "postinstall": "lerna bootstrap",
     "bootstrap": "lerna bootstrap",
-    "ci-publish": "semantic-release && lerna run tsc && lerna publish"
+    "publish:master": "lerna publish --conventional-commits --cd-version=prerelease --yes --independent --npm-tag=unstable --preid=unstable --message 'chore(release): Publish [ci skip]' --exact",
+    "publish:beta": "lerna publish --conventional-commits --cd-version=prerelease --yes --independent --npm-tag=beta --preid=beta --message 'chore(release): Publish [ci skip]' --exact",
+    "publish:release": "lerna publish --conventional-commits --yes  --message 'chore(release): Publish [ci skip]'"
   },
   "version": "0.3.8",
   "repository": {
@@ -35,18 +37,6 @@
   "description": "[![lerna](https://img.shields.io/badge/maintained%20with-lerna-cc00ff.svg)](https://lerna.js.org/) [![Commitizen friendly](https://img.shields.io/badge/commitizen-friendly-brightgreen.svg)](http://commitizen.github.io/cz-cli/)",
   "bugs": {
     "url": "https://github.com/wizeline/lerna-leo/issues"
-  },
-  "release": {
-    "prepare": [
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/git"
-    ],
-    "verifyConditions": [
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/git"
-    ]
   },
   "homepage": "https://github.com/wizeline/lerna-leo#readme",
   "main": "index.js",
