--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ jobs:
         skip_cleanup: true
         script:
           - echo ~/.npmrc
-          - npm run ci-publish
+          - npm run publish
