--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,9 @@ jobs:
     - stage: release
       node_js: lts/*
       # Advanced: optionally overwrite your default `script` step to skip the tests
-#      script: skip
+      # script: skip
       deploy:
         provider: script
         skip_cleanup: true
         script:
-          - echo ~/.npmrc
-          - npm run ci-publish
+          - npm run publish
