--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bootstrap": "lerna bootstrap",
     "publish:master": "lerna publish --conventional-commits --cd-version=prerelease --yes --independent --npm-tag=unstable --preid=unstable --message 'chore(release): Publish [ci skip]' --exact",
     "publish:beta": "lerna publish --conventional-commits --cd-version=prerelease --yes  --npm-tag=beta --preid=beta --message 'chore(release): Publish [ci skip]' --exact",
-    "publish": "lerna publish from-git --conventional-commits --yes  --message 'chore(release): Publish version [ci skip]'"
+    "publish": "lerna publish --conventional-commits --yes --message 'chore(release): Publish version [ci skip]'"
   },
   "version": "0.3.8",
   "repository": {
