--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ jobs:
         provider: script
         skip_cleanup: true
         script:
+          - git status
           - npm run publish
+          - git status
