--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ jobs:
         provider: script
         skip_cleanup: true
         script:
+          - git checkout $TRAVIS_BRANCH
           - npm run publish
