--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+git:
+  depth: false
+
 language: node_js
 
 node_js:
@@ -14,6 +17,5 @@ jobs:
         provider: script
         skip_cleanup: true
         script:
-          - git fetch
           - git reset --hard origin/master
           - npm run publish
