--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: node_js
 node_js:
   - 10
 
-before_deploy: 
+before_deploy:
+  - git remote add origin https://${GITHUB_TOKEN}@github.com/${GH_USERNAME}/wizeline/lerna-leo.git
   - git reset --hard origin/master
   - git checkout master
 jobs:
