--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ node_js:
   - 10
 
 before_deploy:
-  - git remote add origin https://${GITHUB_TOKEN}@github.com/${GH_USERNAME}/wizeline/lerna-leo.git
+  - git remote remove origin
+  - git remote add origin https://${GH_TOKEN}@github.com/${GH_USERNAME}/wizeline/lerna-leo.git
   - git reset --hard origin/master
   - git checkout master
 jobs:
