--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 
 before_deploy:
   - git remote remove origin
-  - git remote add origin https://${GH_TOKEN}@github.com/${GH_USERNAME}/wizeline/lerna-leo.git
+  - git remote add origin https://${GH_USERNAME}:${GH_TOKEN}@github.com/${GH_USERNAME}/lerna-leo.git
   - git reset --hard master
   - git checkout master
 jobs:
