--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ node_js:
   - 10
 
 before_deploy:
+  - git reset --hard master
   - git checkout master
+  - git remote remove origin
+  - git remote add origin https://${GH_USERNAME}:${GH_TOKEN}@github.com/${GH_USERNAME}/lerna-leo.git
+jobs:
   include:
     # Define the release stage that runs semantic-release
     - stage: release
