--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lerna-semantic-release": "9.1.0",
     "commitizen": "3.1.1",
     "semantic-release-conventional-commits": "2.0.1",
-    "typescript": "3.5.2",
-    "semantic-release": "^15.13.18"
+    "typescript": "3.5.2"
   },
   "config": {
     "commitizen": {
@@ -25,7 +24,7 @@
     "bootstrap": "lerna bootstrap",
     "publish": "lerna publish --conventional-commits --yes --message 'chore(release): Publish version [ci skip]'"
   },
-  "version": "0.0.0-development",
+  "version": "0.3.8",
   "repository": {
     "type": "git",
     "url": "https://github.com/wizeline/lerna-leo.git"
