--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,11 @@ node_js:
 before_deploy:
   - git checkout master
   - git remote set-url origin https://${GH_TOKEN}@github.com/wizeline/lerna-leo
-  - echo $NPM_CONFIG_EMAIL
-  - echo $NPM_TOKEN
+  - cat ~/.npmrc
+deploy:
+  provider: npm
+  email: $NPM_CONFIG_EMAIL
+  api_key: $NPM_TOKEN
 jobs:
   include:
     # Define the release stage that runs semantic-release
@@ -16,6 +19,8 @@ jobs:
       # Advanced: optionally overwrite your default `script` step to skip the tests
       # script: skip
       deploy:
+        on:
+          branch: master
         provider: script
         skip_cleanup: true
         script:
