--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "npmClient": "npm",
   "packages": [
-    "packages/learning-package-one"
+    "packages/*"
   ],
-  "version": "0.18.0"
+  "version": "0.19.0"
 }
