--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,7 @@ jobs:
         os: [ubuntu-16.04, ubuntu-18.04]
 
     steps:
+    - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node }}
       uses: actions/setup-node@v1
       with:
