feat(nodejs.yml): remove name to action

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,8 +24,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node }}
-      uses: actions/setup-node@v1
+    #- name: Use Node.js ${{ matrix.node }}
+    - uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node }}
     - run: npm ci
