fix(nodejs.yml): add name to checkout@v2

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,9 +23,10 @@ jobs:
         os: [ubuntu-16.04, ubuntu-18.04]
 
     steps:
-    - uses: actions/checkout@v2
-    #- name: Use Node.js ${{ matrix.node }}
-    - uses: actions/setup-node@v1
+    - name: Checks-out repository
+      uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node }}
+      uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node }}
     - run: npm ci
