feat(nodejs.yml): add name to run processes

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,9 +29,12 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: CI process
+      run: npm ci
+    - name: Building script
+      run: npm run build --if-present
+    - name: Test process
+      run: npm test
       env:
         CI: true
 ...
