--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,31 +15,23 @@ on:
 jobs:
   build:
 
-    runs-on: ${{ matrix.os }}          # Enviroment of deploy to test
+    runs-on: ubuntu-latest          # Enviroment of deploy to test
     
-    strategy:                          # Run job with different versions of Node.js and Ubuntu
-      matrix:                   
-        node: [10.x, 12.x]
-        os: [ubuntu-16.04, ubuntu-18.04]
-
     steps:
     - name: Checks-out repository
       uses: actions/checkout@v2
+    - name: Get npm cache directory
+      id: npm-cache
+      run: echo "::set-output name=dir::$(npm config get cache)"
     - name: Cache node modules
+      id: cache-node-modules
       uses: actions/cache@v1
-      env:
-        cache-name: cache-node-modules
       with:
-        path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-    
-    - name: Use Node.js ${{ matrix.node }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node }}
+        path: ${{ steps.npm-cache.outputs.dir }}      # npm cache files are stored in `~/.npm` on Linux/macOS
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+    - name: Validate cache
+      if: steps.cache-node-modules.outputs.cache-hit == 'true'
+      run: echo "Detectó caché"
     - name: CI process
       run: npm ci
     - name: Building script
