--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,15 +20,15 @@ jobs:
     steps:
     - name: Checks-out repository
       uses: actions/checkout@v2
-    - name: Get npm cache directory
-      id: npm-cache
-      run: echo "::set-output name=dir::$(npm config get cache)"    # Get directory of npm cache
+    #- name: Get npm cache directory
+    #  id: npm-cache
+    #  run: echo "::set-output name=dir::$(npm config get cache)"    # Get directory of npm cache
     - name: Cache node modules
       id: cache-node-modules
       uses: actions/cache@v1
       with:
-        path: ${{ steps.npm-cache.outputs.dir }}      # npm cache files are stored in `~/.npm` on Linux/macOS
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        path: node_modules      # npm cache files are stored in `~/.npm` on Linux/macOS
+        key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
     - name: Validate cache
       if: steps.cache-node-modules.outputs.cache-hit == 'true'
       run: echo "Detectó caché"
