--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,10 +27,13 @@ jobs:
       id: cache-node-modules
       uses: actions/cache@v1
       with:
-        path: node_modules      # npm cache files are stored in `~/.npm` on Linux/macOS
+        path: */*/node_modules      # npm cache files are stored in `~/.npm` on Linux/macOS
         key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
-    - name: Validate cache
+    - name: Validate cache 1
       if: steps.cache-node-modules.outputs.cache-hit == 'true'
+      run: echo "Detectó caché"
+    - name: Validate cache 2
+      if: steps.cache-node-modules.outputs.cache-hit != 'true'
       run: echo "Detectó caché"
     - name: CI process
       run: npm ci
