fix(nodejs.yml): new paths

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,7 +27,10 @@ jobs:
       id: cache-node-modules
       uses: actions/cache@v1
       with:
-        path: */*/node_modules      # npm cache files are stored in `~/.npm` on Linux/macOS
+        path: |
+              node_modules
+              */*/node_modules      
+  # npm cache files are stored in `~/.npm` on Linux/macOS
         key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
     - name: Validate cache 1
       if: steps.cache-node-modules.outputs.cache-hit == 'true'
