--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v2
     #- name: Get npm cache directory
     #  id: npm-cache
-    #  run: echo "::set-output name=dir::$(npm config get cache)"    # Get directory of npm caches
+    #  run: echo "::set-output name=dir::$(npm config get cache)"    # Get directory of npm cache
     - name: Cache node modules
       id: cache-node-modules
       uses: actions/cache@v1
