feat(checkout): checkout
affects: @evolsignal/learning-package-one, @evolsignal/learning-package-two

--- a/.github/workflows/nodejs_publish.yml
+++ b/.github/workflows/nodejs_publish.yml
@@ -9,6 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+
+      - name: Checks-out repository
+        uses: actions/checkout@v2
+        
       - name: checkout
         uses: actions/checkout@v1
 
