--- a/.github/workflows/nodejs_publish.yml
+++ b/.github/workflows/nodejs_publish.yml
@@ -29,9 +29,7 @@ jobs:
 
       - name: Install Packages
         run: |
-          pwd
-          ls -la
-          for d in packages/access-decision-manager-express/examples/* ; do (cd "$d" && npm i); done
+          for d in packages/* ; do (cd "$d" && npm i); done
           npm ci
 
       - name: Authenticate with Registry
