--- a/.github/workflows/nodejs_publish.yml
+++ b/.github/workflows/nodejs_publish.yml
@@ -19,18 +19,14 @@ jobs:
 
       - name: Configure CI Git User
         run: |
-          git config --global user.name 'MartinRoman94'
-          git config --global user.email 'martin.arcos@wizeline.com'
-          git remote set-url origin https://$GITHUB_ACTOR:$GH_TOKEN@github.com/wizeline/lerna-leo
+          git config --global user.name 'LeoUrzua'
+          git config --global user.email 'd.leonardo.urzua@gmail.com'
+          git remote set-url origin https://LeoUrzua:$GH_TOKEN@github.com/wizeline/lerna-leo
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
       - name: Checkout and pull branch
-        run: git checkout "${GITHUB_REF:11}" && git pull
-
-      - name: Install Packages
-        run: |
-          npm ci
+        run: git checkout master
 
       - name: Authenticate with Registry
         run: |
@@ -39,6 +35,10 @@ jobs:
           npm whoami
         env:
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+      
+      #- name: Install Packages
+      #  run: |
+      #    npm ci
 
       - name: Publish package
         run: npm run publish
