feat(publish): update crdentials

--- a/.github/workflows/nodejs_publish.yml
+++ b/.github/workflows/nodejs_publish.yml
@@ -19,11 +19,12 @@ jobs:
 
       - name: Configure CI Git User
         run: |
-          git config --global user.name 'LeoUrzua'
-          git config --global user.email 'd.leonardo.urzua@gmail.com'
-          git remote set-url origin https://LeoUrzua:$GH_TOKEN@github.com/wizeline/lerna-leo
+          git config --global user.name 'MartinRoman94'
+          git config --global user.email 'martin.arcos@wizeline.com'
+          git remote set-url origin https://$GH_USER:$GH_TOKEN@github.com/wizeline/lerna-leo
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_USER: ${{ secrets.GH_USER }}
 
       - name: Checkout and pull branch
         run: git checkout master
