--- a/.github/workflows/nodejs_publish.yml
+++ b/.github/workflows/nodejs_publish.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Authenticate with Registry
         run: |
-          echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
+          echo "//registry.npmjs.org/:_authToken=\$NPM_TOKEN" > .npmrc
           npm whoami
         env:
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
